@@ -21,12 +21,11 @@ import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import java.io.File;
+import java.io.IOException;
 import java.security.Provider;
 import java.security.Security;
 import java.util.Arrays;
 import java.util.Random;
-
-import javax.xml.bind.DatatypeConverter;
 
 import org.eclipse.californium.TestTools;
 import org.eclipse.californium.core.CoapClient;
@@ -46,12 +45,12 @@ import org.eclipse.californium.elements.config.Configuration.DefinitionsProvider
 import org.eclipse.californium.core.config.CoapConfig;
 import org.eclipse.californium.core.server.resources.CoapExchange;
 import org.eclipse.californium.cose.AlgorithmID;
-import org.eclipse.californium.cose.CoseException;
 import org.eclipse.californium.cose.KeyKeys;
 import org.eclipse.californium.cose.OneKey;
 import org.eclipse.californium.elements.EndpointContext;
 import org.eclipse.californium.elements.MapBasedEndpointContext;
 import org.eclipse.californium.elements.rule.TestNameLoggerRule;
+import org.eclipse.californium.elements.util.Base64;
 import org.eclipse.californium.elements.util.Bytes;
 import org.eclipse.californium.elements.util.StringUtil;
 import org.eclipse.californium.oscore.HashMapCtxDB;
@@ -128,7 +127,7 @@ public class CountersignAlgorithmsTest {
 
 	// Key for the GM
 	private static String gmPublicKeyString = "pQF4GmNvYXBzOi8vbXlzaXRlLmV4YW1wbGUuY29tAmxncm91cG1hbmFnZXIDeBpjb2FwczovL2RvbWFpbi5leGFtcGxlLm9yZwQaq5sVTwihAaQDJwEBIAYhWCDN4+/TvD+ZycnuIQQVxsulUGG1BG6WO4pYyRQ6YRZkcg==";
-	private static byte[] gmPublicKey = DatatypeConverter.parseBase64Binary(gmPublicKeyString);
+	private static byte[] gmPublicKey;
 
 	// Keys for client and server
 	private static String clientKeyEcdsa256 = "pgECI1gg2qPzgLjNqAaJWnjh9trtVjX2Gp2mbzyAQLSJt9LD2j8iWCDe8qCLkQ59ZOIwmFVk2oGtfoz4epMe/Fg2nvKQwkQ+XiFYIKb0PXRXX/6hU45EpcXUAQPufU03fkYA+W6gPoiZ+d0YIAEDJg==";
@@ -149,7 +148,8 @@ public class CountersignAlgorithmsTest {
 	private String uri;
 
 	@Before
-	public void init() {
+	public void init() throws IOException {
+		gmPublicKey = Base64.decode(gmPublicKeyString);
 		EndpointManager.clear();
 	}
 
@@ -168,8 +168,8 @@ public class CountersignAlgorithmsTest {
 		String serverKeyString = serverKeyEcdsa256;
 		String clientKeyString = clientKeyEcdsa256;
 
-		OneKey serverKey = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(serverKeyString)));
-		OneKey clientKey = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(clientKeyString)));
+		OneKey serverKey = new OneKey(CBORObject.DecodeFromBytes(Base64.decode(serverKeyString)));
+		OneKey clientKey = new OneKey(CBORObject.DecodeFromBytes(Base64.decode(clientKeyString)));
 
 		// Check the properties of the decoded keys
 
@@ -194,8 +194,8 @@ public class CountersignAlgorithmsTest {
 		String serverKeyString = clientKeyEcdsa384;
 		String clientKeyString = serverKeyEcdsa384;
 
-		OneKey serverKey = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(serverKeyString)));
-		OneKey clientKey = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(clientKeyString)));
+		OneKey serverKey = new OneKey(CBORObject.DecodeFromBytes(Base64.decode(serverKeyString)));
+		OneKey clientKey = new OneKey(CBORObject.DecodeFromBytes(Base64.decode(clientKeyString)));
 
 		// Check the properties of the decoded keys
 
@@ -220,8 +220,8 @@ public class CountersignAlgorithmsTest {
 		String serverKeyString = clientKeyEcdsa512;
 		String clientKeyString = serverKeyEcdsa512;
 
-		OneKey serverKey = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(serverKeyString)));
-		OneKey clientKey = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(clientKeyString)));
+		OneKey serverKey = new OneKey(CBORObject.DecodeFromBytes(Base64.decode(serverKeyString)));
+		OneKey clientKey = new OneKey(CBORObject.DecodeFromBytes(Base64.decode(clientKeyString)));
 
 		// Check the properties of the decoded keys
 
@@ -244,13 +244,13 @@ public class CountersignAlgorithmsTest {
 	public void testEDDSA() throws Exception {
 		// Install EdDSA cryptographic provider
 		Provider EdDSA = new EdDSASecurityProvider();
-		Security.insertProviderAt(EdDSA, 0);
+		Security.insertProviderAt(EdDSA, 1);
 
 		String serverKeyString = clientKeyEddsa;
 		String clientKeyString = serverKeyEddsa;
 
-		OneKey serverKey = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(serverKeyString)));
-		OneKey clientKey = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(clientKeyString)));
+		OneKey serverKey = new OneKey(CBORObject.DecodeFromBytes(Base64.decode(serverKeyString)));
+		OneKey clientKey = new OneKey(CBORObject.DecodeFromBytes(Base64.decode(clientKeyString)));
 
 		// Check the properties of the decoded keys
 
@@ -323,10 +323,9 @@ public class CountersignAlgorithmsTest {
 	 * @param serverKey the server signature key to use
 	 * 
 	 * @throws OSException on failure to create the contexts
-	 * @throws CoseException on failure to create the contexts
 	 */
 	public void setClientContext(AlgorithmID algCountersign, OneKey clientKey, OneKey serverKey)
-			throws OSException, CoseException {
+			throws OSException {
 		// Set up OSCORE context information for request (client)
 		byte[] sid = new byte[] { 0x25 };
 		byte[] rid1 = new byte[] { 0x77 };
@@ -353,10 +352,9 @@ public class CountersignAlgorithmsTest {
 	 * @param serverKey the server signature key to use
 	 * 
 	 * @throws OSException on failure to create the contexts
-	 * @throws CoseException on failure to create the contexts
 	 */
 	public void setServerContext(AlgorithmID algCountersign, OneKey clientKey, OneKey serverKey)
-			throws OSException, CoseException {
+			throws OSException {
 		// Set up OSCORE context information for response (server)
 
 		byte[] sid = new byte[] { 0x77 };
@@ -384,12 +382,10 @@ public class CountersignAlgorithmsTest {
 	 * @param clientKey the client signature key to use
 	 * @param serverKey the server signature key to use
 	 * 
-	 * @throws InterruptedException if resource update task fails
 	 * @throws OSException on test failure
-	 * @throws CoseException on test failure
 	 */
 	public void createServer(AlgorithmID algCountersign, OneKey clientKey, OneKey serverKey)
-			throws InterruptedException, OSException, CoseException {
+			throws OSException {
 		// Do not create server if it is already running
 		if (serverEndpoint != null) {
 			// TODO: Check if this ever happens
